--- a/jingdongM/index-修改页面结构来实现轮播.html
+++ b/jingdongM/index-修改页面结构来实现轮播.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
     <!-- 引入公共样式 -->
     <link rel="stylesheet" type="text/css" media="screen" href="./css/base.css">
-    <link rel="stylesheet" type="text/css" href="./css/index.css">
+    <link rel="stylesheet" type="text/css" href="./css/index1.css">
     <script src="./js/index.js"></script>
 </head>
 <body>
@@ -28,7 +28,12 @@
             <!-- 静态图片UI图片 放在image -->
             <!-- 内容图片放在upload里面 -->
             <!-- 图片 -->
-            <ul class="jd_bannerImage clearfix">
+            <ul class="jd_bannerImage">
+                <li>
+                    <a href="#">
+                        <img src="./upload/8.jpg" alt=""/>
+                    </a>
+                </li>
                 <li>
                     <a href="#">
                         <img src="./upload/1.jpg" alt=""/>
@@ -65,9 +70,14 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <img src="./upload/8.jpg" alt=""/>
-                    </a>
+                        <a href="#">
+                            <img src="./upload/8.jpg" alt=""/>
+                        </a>
+                </li>
+                <li>
+                        <a href="#">
+                            <img src="./upload/1.jpg" alt=""/>
+                        </a>
                 </li>
                     
             </ul>
