--- a/jingdongM/index.html
+++ b/jingdongM/index.html
@@ -9,7 +9,7 @@
     <!-- 引入公共样式 -->
     <link rel="stylesheet" type="text/css" media="screen" href="./css/base.css">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
-    <script src="./js/index.js"></script>
+    <script src="./js/index1.js"></script>
 </head>
 <body>
     <!-- 页面Wrap -->
